; ModuleID = '/home/carl/AnghaBench/vlc/modules/hw/vdpau/extr_vlc_vdpau.c_vdp_output_surface_put_bits_native.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/hw/vdpau/extr_vlc_vdpau.c_vdp_output_surface_put_bits_native.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 (i32, i8**, i32*, i32*)* }

@OUTPUT_SURFACE_PUT_BITS_NATIVE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vdp_output_surface_put_bits_native(%struct.TYPE_5__* %0, i32 %1, i8** %2, i32* %3, i32* %4) #0 {
  %6 = alloca %struct.TYPE_5__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8**, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %6, align 8
  store i32 %1, i32* %7, align 4
  store i8** %2, i8*** %8, align 8
  store i32* %3, i32** %9, align 8
  store i32* %4, i32** %10, align 8
  %11 = load i32, i32* @OUTPUT_SURFACE_PUT_BITS_NATIVE, align 4
  %12 = call i32 @CHECK_FUNC(i32 %11)
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %14 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 0
  %16 = load i32 (i32, i8**, i32*, i32*)*, i32 (i32, i8**, i32*, i32*)** %15, align 8
  %17 = load i32, i32* %7, align 4
  %18 = load i8**, i8*** %8, align 8
  %19 = load i32*, i32** %9, align 8
  %20 = load i32*, i32** %10, align 8
  %21 = call i32 %16(i32 %17, i8** %18, i32* %19, i32* %20)
  ret i32 %21
}

declare dso_local i32 @CHECK_FUNC(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
